# World_Environment

./: README.md  example.py  pyproject.toml  requirements.txt  scratch.toml  setup.py
envs/: __init__.py
envs/data/VMT_point_map/: Average_Annual_FeatureT_Clip.sbn  Average_Annual_FeatureT_Clip.shx  Average_Annual_FeatureToPoin3.sbn  Average_Annual_FeatureToPoin3.sbx  Average_Annual_FeatureToPoin3.shp  Average_Annual_FeatureToPoin3.shp.xml  Average_Annual_FeatureToPoin3.shx
envs/data/community_boundary_map/: geo_export_b5a56d3a9_Project.dbf  geo_export_b5a56d3a9_Project.shp  geo_export_b5a56d3a9_Project.shp.xml  geo_export_b5a56d3a9_Project.shx
envs/data/existing_infrastructure_map/: alt_fuel_stationsSep_Pr_Clip1.sbn  alt_fuel_stationsSep_Pr_Clip1.shp  alt_fuel_stationsSep_Pr_Clip1.shp.xml  alt_fuel_stationsSep_Pr_Clip1.shx
envs/data/landuse_map/: Landuse2018_Dissolve_Pr_Clip.sbn  Landuse2018_Dissolve_Pr_Clip.sbx  Landuse2018_Dissolve_Pr_Clip.shx
envs/data/road_map/: geo_export_90a38541d_Pr_Clip.shx  geo_export_90a38541d_Project.sbn  geo_export_90a38541d_Project.sbx  geo_export_90a38541d_Project.shp.xml  geo_export_90a38541d_Project.shx
envs/data/transmission_line_map/: geo_export_d59_Polyg_Pr_Clip.dbf  geo_export_d59_Polyg_Pr_Clip.sbn  geo_export_d59_Polyg_Pr_Clip.sbx  geo_export_d59_Polyg_Pr_Clip.shp  geo_export_d59_Polyg_Pr_Clip.shp.xml  geo_export_d59_Polyg_Pr_Clip.shx
envs/multi_policies/: __init__.py  chicago_multi_policy_map.py
template/: pyproject.toml
template/env_name/: __init__.py
utils/: action.py  data_conversion.py
(+27 files in other folders)
