[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template"]

[projct]
name = "gymnasium_env_jae"
version = "0.0.1"
dependencies = [
    "copier",
    "pyyaml",
    "gymnasium",
    "pytest",
    "toml",
    "mypy",
]

[tool.ruff.pydocstyle]
convention = "numpy"